<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Baity</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="type_your_user_name">Type your user name</string>
    <string name="login">LogIn</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="verification_code">verification code</string>
    <string name="enter_your_code">enter your code</string>
    <string name="verify">Verify</string>
    <string name="your_account_has_been_verified">Your account has been verified</string>
    <string name="Verification_code">Verification_code</string>
    <string name="Verificationcode">Verification code</string>
    <string name="Enter_your_code">Enter your code</string>
    <string name="description">Description</string>
    <string name="home_description">المقاولات العامة ومواد البناء</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Us</string>
    <string name="my_favorite">My Favorite</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="about_descriptio">Lorem Ipsum is simply dummy \n text of the printing and type \n industry Lorem Ipsum has been \n the
        industry\'s standard dummy \n text ever since the 1500s when \n an unknown printer took \n a galley of type and scrambled \n it
to make a type specimen book\n It has survived not only five \n centuries but also the leap into \n electronic </string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>
    <string name="www_baity_com">www.Baity.com</string>
    <string name="_01111111111">01111111111</string>
    <string name="ektrahat">Glad to receive your suggestion</string>
    <string name="arabic">عربى</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old Password</string>
    <string name="change_pssword_succesfully">Change Pssword Succesfully</string>
    <string name="done">Done</string>
    <string name="reset_password_succesfully">Reset password succesfully</string>
    <string name="what_is_lorem_ipsum">What is Lorem Ipsum?</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting">Lorem Ipsum is simply dummy text of the printing and typesetting</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="english">English</string>
    <string name="type_your_password">Type your password</string>
    <string name="or_n_sign_up_using">Or \n Sign up using</string>
    <string name="don_t_have_an_account_n_signup">Don\'t have an account?  \n Signup</string>
    <string name="i_agree_to_baity_s_terms_of_use">I agree to Baity\'s Terms of use</string>
    <string name="nameerror">Invalid name</string>
    <string name="emailerror">Invalid email</string>
    <string name="passworderror">Invalid password</string>
    <string name="mobileerror">Invalid phone</string>
    <string name="match_password">Password doesn\'t match</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out ?</string>
    <string name="not_now">Not Now</string>
    <string name="rate">Rate</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="search">Search</string>
    <string name="image_source">Image Source</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="please_choose_an_image_source">Please choose an image source</string>
    <string name="error">Error</string>

    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
    </string-array>

    <string name="facebook_app_id">495225944720667</string>
    <string name="fb_login_protocol_scheme">fb495225944720667</string>
    <string name="glade_to_reseve_your_suggestion">Glade to reseve your suggestion</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">sgAKcmzGTh4PHilwzzFP47eDj</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">33bE3VNVxT1O51Tj4eJdSyyu0S8rKUsQvFhTCwQQaeX7nro35G</string>
    <string name="qibla">Qibla</string>
    <string name="compass_and_prayer_times">Compass and prayer times</string>
    <string name="gps_settings_title">aaaa</string>
    <string name="gps_settings_text">ssss</string>
    <string name="settings_button_ok">ok</string>
    <string name="settings_button_cancel">cancel</string>
    <string-array name="numbers">
        <item>Key</item>
        <item>+965</item>
        <item>+974</item>
        <item>+966</item>
        <item>+212</item>
        <item>+971</item>
        <item>+973</item>
        <item>+968</item>
        <item>+926</item>
        <item>+20</item>
        <item>+963</item>
        <item>+216</item>
        <item>+218</item>
        <item>+970</item>
        <item>+213</item>
        <item>+222</item>
        <item>+961</item>
        <item>+249</item>
        <item>+964</item>
        <item>+967</item>
        <item>+253</item>
        <item>+252</item>
        <item>+269</item>
    </string-array>
</resources>
