<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login.LogIn">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.45"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/btnBack"
            android:src="@drawable/ic_back_vector"
            android:layout_marginTop="@dimen/_12sdp"
            android:visibility="gone"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.example.baity.Designs.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"/>

        <com.example.baity.Designs.MyTextViewBold
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <com.example.baity.Designs.MyEditTextBold
            android:id="@+id/loginEmail"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/type_your_user_name"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/light_gray"
            android:paddingTop="@dimen/_15sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"/>

        <com.example.baity.Designs.MyTextViewBold
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#fff"
            android:textSize="@dimen/_12ssp" />

        <com.example.baity.Designs.MyEditTextBold
            android:id="@+id/loginPassword"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/type_your_password"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/light_gray"
            android:paddingTop="@dimen/_15sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            />


        <com.example.baity.Designs.MyTextViewBold
            android:id="@+id/forget_password"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:gravity="end"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"/>

      <com.example.baity.Designs.MyButtonBold
          android:id="@+id/btn_login"
          android:layout_width="@dimen/_150sdp"
          android:layout_height="@dimen/_40sdp"
          android:layout_gravity="center"
          android:background="@drawable/btn"
          android:text="@string/login"
          android:textColor="@color/white"
          android:textSize="@dimen/_12ssp"
          android:textAllCaps="false"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"/>

        <com.example.baity.Designs.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_n_sign_up_using"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/_12ssp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/faceBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/facebook_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebookbtn" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/twitter_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitterbtn"
                android:visibility="gone"/>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.gms.common.SignInButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/sign_in_button"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Google_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gmailbtn"
                    android:visibility="visible"/>



            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"/>

        <com.example.baity.Designs.MyTextViewBold
            android:id="@+id/OpenSignUpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_n_signup"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
           />





    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>