<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Setting">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.45"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/btnBack"
            android:src="@drawable/ic_back_vector"
            android:layout_marginTop="@dimen/_12sdp"/>

        <com.example.baity.Designs.MyTextViewBold
            android:id="@+id/islamicDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"/>

    </androidx.appcompat.widget.Toolbar>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_popup">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"/>

            <com.example.baity.Designs.MyTextViewBold
                android:id="@+id/myProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:visibility="visible"
                android:layout_marginBottom="@dimen/_20sdp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"/>

            <com.example.baity.Designs.MyTextViewBold
                android:id="@+id/about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"/>

            <com.example.baity.Designs.MyTextViewBold
                android:id="@+id/contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"/>

            <com.example.baity.Designs.MyTextViewBold
                android:id="@+id/my_favourirte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_favorite"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"/>

            <com.example.baity.Designs.MyTextViewBold
                android:id="@+id/change_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>



        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"/>

            <com.example.baity.Designs.MyTextViewBold
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:visibility="visible"
                android:layout_marginBottom="@dimen/_20sdp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"/>

            <com.example.baity.Designs.MyTextViewBold
                android:id="@+id/terms_and_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"/>

            <com.example.baity.Designs.MyTextViewBold
                android:id="@+id/logOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>