<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Change_password.Change_password">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.45"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/btnBack"
            android:src="@drawable/ic_back_vector"
            android:layout_marginTop="@dimen/_12sdp"/>

        <com.example.baity.Designs.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"/>

    </androidx.appcompat.widget.Toolbar>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.example.baity.Designs.MyEditTextBold
            android:id="@+id/change_old_password"
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/dark_gray"
            android:textColorHint="@color/light_gray"
            android:hint="@string/old_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:inputType="textPassword"
            />


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"/>

        <com.example.baity.Designs.MyEditTextBold
            android:id="@+id/change_new_password"
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/dark_gray"
            android:textColorHint="@color/light_gray"
            android:hint="@string/new_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:inputType="textPassword"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"/>

        <com.example.baity.Designs.MyEditTextBold
            android:id="@+id/change_Confirm_password"
            android:padding="@dimen/_10sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/dark_gray"
            android:textColorHint="@color/light_gray"
            android:hint="@string/confirm_new_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:inputType="textPassword"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"/>

        <com.example.baity.Designs.MyButtonBold
            android:id="@+id/btnSubmit"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:background="@drawable/btn"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textAllCaps="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>